--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <!-- ETAPA 1: PONTUAÇÃO DOS VALORES -->
             <section id="step1" class="step active">
                 <h2>Etapa 1: Mapeie seus Valores</h2>
-                <p class="instructions">Para cada valor abaixo, dê duas notas de 0 a 10.   
-<b>(I) Importância:</b> O quão importante é ter este valor preenchido na sua vida?   
-<b>(S) Sentimento:</b> O quão mal você se sente quando este valor é desrespeitado?</p>
+                <p class="instructions">Para cada valor abaixo, dê duas notas de 0 a 10.</br>
+                    <b>(I) Importância:</b> O quão importante é ter este valor preenchido na sua vida?</br>  
+                    <b>(S) Sentimento:</b> O quão mal você se sente quando este valor é desrespeitado?</p>
                 <div id="values-list">
                     <!-- A lista de valores será inserida aqui pelo JavaScript -->
                 </div>
