Update button text for clarity

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <p class="instructions">
                     Para cada valor abaixo, dê duas notas de 0 a 10.  
 
-                    <b>(I ) Importância:</b> 0 = Sem importância | 10 = Total importância  
+                    <b>(I) Importância:</b> 0 = Sem importância | 10 = Total importância  
 
                     <b>(S) Sentimento:</b> 0 = Nenhum pouco mal | 10 = Totalmente mal
                 </p>
@@ -38,7 +38,7 @@
                         <button id="add-custom-value-btn">+ Adicionar</button>
                     </div>
                 </div>
-                <button id="goto-step2-btn" class="primary-btn" disabled>Analisar meus Top 5 Valores</button>
+                <button id="goto-step2-btn" class="primary-btn" disabled>Continuar</button>
             </section>
 
             <!-- ETAPA 2: SIGNIFICADO PESSOAL -->
