Fix line breaks in instructions for value scoring

--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@
             <section id="step1" class="step active">
                 <h2>Etapa 1: Mapeie seus Valores</h2>
                 <p class="instructions">
-                    Para cada valor abaixo, dê duas notas de 0 a 10.  
-
-                    <b>(I) Importância:</b> 0 = Sem importância | 10 = Total importância  
-
+                    Para cada valor abaixo, dê duas notas de 0 a 10.</br>
+                    <b>(I) Importância:</b> 0 = Sem importância | 10 = Total importância</br>
                     <b>(S) Sentimento:</b> 0 = Nenhum pouco mal | 10 = Totalmente mal
                 </p>
                 <div id="values-list">
