Add introductory section and update analysis instructions
Added an introductory section explaining values and their importance, including a four-step journey for self-discovery. Updated the instructions for analyzing motivators and saboteurs with practical examples.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,28 @@
             <p>Sua bússola interna para decisões mais claras</p>
         </header>
 
+        <div class="value-card">
+    	    <details class="intro-accordion">
+        	<summary>
+            	    <!-- Título agora se parece com o de um valor -->
+            	    <h3>O que são Valores e por que eles importam?</h3>
+        	</summary>
+        	<div class="accordion-content">
+            	    <!-- Descrição agora se parece com a de um valor -->
+            	    <p>Seus valores são os princípios que governam, muitas vezes de forma inconsciente, suas decisões e reações. Eles são a razão pela qual algumas situações te motivam profundamente e outras te irritam ou frustram.</p>
+            	    <p>Nós não vemos o mundo como ele é, mas sim como <em>nós somos</em>. Ter clareza sobre seus valores te dá um superpoder: a capacidade de entender suas próprias reações, melhorar seus relacionamentos e tomar decisões mais alinhadas com quem você realmente é.</p>
+            	    <p>Esta ferramenta foi desenhada para te guiar em uma jornada de autoconhecimento em 4 passos:</p>
+            	    <ol>
+                	<li><b>Mapeamento:</b> Você vai pontuar uma lista de valores com base na importância que eles têm para você.</li>
+                	<li><b>Significado:</b> Você vai definir o que seus valores mais importantes realmente significam na sua vida.</li>
+                	<li><b>Análise:</b> Você vai descobrir como cada valor atua como uma força (Motivador) ou uma fraqueza (Sabotador).</li>
+                	<li><b>Prova de Fogo:</b> Você colocará seus valores à prova em cenários práticos para descobrir sua verdadeira hierarquia.</li>
+            	    </ol>
+            	    <p>Ao final, você terá um mapa claro da sua "bússola interna". Vamos começar?</p>
+        	</div>
+    	    </details>
+	</div>
+
         <!-- ETAPA 1: MAPEAMENTO DOS VALORES -->
         <section id="step1" class="step active">
             
@@ -60,14 +82,21 @@
         <!-- ETAPA 3: MOTIVADORES E SABOTADORES -->
         <section id="step3" class="step">
             <h2>Etapa 3: Motivadores e Sabotadores</h2>
-            <p class="instructions-box">Para finalizar a análise, identifique como cada valor te ajuda ou atrapalha a alcançar seus objetivos.</p>
+            <p class="instructions-box">
+    		Ótimo! Agora vamos dar profundidade a esses valores. Todo valor tem duas faces: a "luz" que te impulsiona (seu <b>Motivador</b>) e a "sombra" que te limita (seu <b>Sabotador</b>).</br>  
+	        Para cada valor abaixo, descreva como ele te ajuda a avançar e como ele te atrapalha no dia a dia.
+	    </p>
             <div class="example-box">
-                <p><strong>Exemplo prático para o valor "Justiça":</strong></p>
-                <ul>
-                    <li><strong>Ajuda (Motivador):</strong> "Meu senso de 'Justiça' me ajuda a ser um líder melhor, pois garanto que minha equipe seja tratada de forma igualitária, o que aumenta a motivação de todos."</li>
-                    <li><strong>Atrapalha (Sabotador):</strong> "Às vezes, meu senso de 'Justiça' me atrapalha, pois gasto muita energia em pequenas discussões que considero 'injustas', me desviando do meu objetivo principal."</li>
-                </ul>
-            </div>
+    		<p><strong>Exemplo prático para o valor "Honestidade":</strong></p>
+    		<ul>
+        	    <li>
+            		<strong>Ajuda (Motivador):</strong> "Minha 'Honestidade' me ajuda a construir confiança com meus clientes, pois sou transparente sobre prazos e desafios, o que fortalece a relação a longo prazo."
+        	    </li>
+        	    <li>
+            		<strong>Atrapalha (Sabotador):</strong> "Às vezes, minha 'Honestidade' excessiva me atrapalha, pois dou feedbacks diretos demais em momentos inoportunos, o que pode magoar pessoas e gerar conflitos desnecessários."
+        	    </li>
+    		</ul>
+	    </div>
             <div id="top5-triggers-list">
                 <!-- Cards para motivadores/sabotadores serão inseridos aqui -->
             </div>
