Add id to value-card for intro section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p>Sua bússola interna para decisões mais claras</p>
         </header>
 
-        <div class="value-card">
+        <div class="value-card" id="intro-card">
     	    <details class="intro-accordion">
         	<summary>
             	    <!-- Título agora se parece com o de um valor -->
